# lightrag-exploration

./: .env.example  .gitignore  README.md  api.py  pyproject.toml  requirements.txt
lightrag_demo/: __init__.py  api.py  cli.py  config.py  rag.py
research_output/: 01-Foundational_Preparedness.md  02-Emergency_Kits_and_Bags.md  03-Water_and_Sanitation.md  04-Food_Storage_and_Security.md  05-Power_and_Communication.md  06-Specific_Threat_Pandemic.md  07-Specific_Threat_Natural_Disaster.md  graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_relation_chunks.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
routers/: frontend_router.py
tests/: __init__.py  test_api.py  test_cli.py  test_config.py
