[project]
name = "lightrag-demo"
version = "0.1.0"
description = "A CLI demo with LightRAG, FastAPI, and Ollama integration"
authors = [
    {name = "James Twose"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastapi (>=0.121.2,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "lightrag-hku (>=1.4.9.8,<2.0.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "click (>=8.3.1,<9.0.0)"
]


[project.scripts]
lightrag-demo = "lightrag_demo.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
